@@ -131,7 +131,7 @@ Features:
 
 * when we detect low battery and no AC on boot, show pretty splash and refuse boot
 
-* libsystemd-journal, libsystemd-login, libudev: add calls to easily attach these objects to sd-event event loops
+* libjournal, libsystemd-login, libudev: add calls to easily attach these objects to sd-event event loops
 
 * be more careful what we export on the bus as (usec_t) 0 and (usec_t) -1
 
@@ -294,8 +294,8 @@ Features:
   - import and delete pstore filesystem content at startup
   - journald: also get thread ID from client, plus thread name
   - journal: when waiting for journal additions in the client always sleep at least 1s or so, in order to minimize wakeups
-  - add API to close/reopen/get fd for journal client fd in libsystemd-journal.
-  - fallback to /dev/log based logging in libsystemd-journal, if we cannot log natively?
+  - add API to close/reopen/get fd for journal client fd in libjournal.
+  - fallback to /dev/log based logging in libjournal, if we cannot log natively?
   - declare the local journal protocol stable in the wiki interface chart
   - journal: reuse XZ context
   - sd-journal: speed up sd_journal_get_data() with transparent hash table in bg
@@ -305,7 +305,7 @@ Features:
   - check if we can make journalctl by default use --follow mode inside of less if called without args?
   - maybe add API to send pairs of iovecs via sd_journal_send
   - journal: when writing journal auto-rotate if time jumps backwards
-  - journal: add a setgid "journal" utility to invoke from libsystemd-journal, which passes fds via STDOUT and does PK access
+  - journal: add a setgid "journal" utility to invoke from libjournal, which passes fds via STDOUT and does PK access
   - journactl: support negative filtering, i.e. FOOBAR!="waldo",
     and !FOOBAR for events without FOOBAR.
   - journal: send out marker messages every now and then, and immediately sync with fdatasync() afterwards, in order to have hourly guaranteed syncs.
